@@ -1,3 +1,8 @@
+2013-09-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Refactor testing for literal bytes, more efficient cast from unsigned.
+
 2013-09-20 Borut Razem <borut.razem AT gmail.com>
 
 	* device/non-free/lib/pic14/configure.in,
